crates/octl-cli/tests/snapshots/envelope_snapshots__node_show_text.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
run-id:        [RUN_ID]
node-id:       n-0001
status:        pending
children:      0
updated_at:    [TS]
