crates/octl-cli/tests/snapshots/envelope_snapshots__run_create_jsonl.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"data":{"run_id":"[RUN_ID]","dir":"[HOME]/runs/[RUN_ID]","supervisor":"delegated-to-parent-supervisor","kind":"spinoff","lifecycle":"autonomous"},"warnings":[]}
