crates/octl-cli/tests/snapshots/envelope_snapshots__run_create_unknown_kind_error.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"invalid_value","message":"error: invalid value 'bogus' for '--kind <KIND>'   [possible values: spinoff, research, technical-decision, fan-out]"}}
