crates/octl-cli/tests/snapshots/envelope_snapshots__run_reattach_supervisor_alive_error.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"supervisor_already_running","message":"supervisor pid [PID] for run [RUN_ID] is alive (no reattach needed)"}}
