crates/octl-cli/tests/snapshots/envelope_snapshots__run_show_not_found_error.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"run_not_found","message":"no run with id zzzzznotarun","invalid_value":"zzzzznotarun"}}
