crates/octl-cli/tests/snapshots/envelope_snapshots__run_show_text.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
run-id:        [RUN_ID]
title:         seed-run
status:        pending
landed:        false (unverified)
kind:          spinoff
lifecycle:     autonomous
created_at:    [TS]
updated_at:    [TS]
nodes:         0
discussions:   0
spinoffs:      0
supervisor:    (none recorded)
